--- a/README
+++ b/README
@@ -13,6 +13,34 @@ What is the PHP/Java bridge?
   If the bridge detects that a java application server is not already
   running, it starts a private java process to serve further requests.
 
+  The bridge adds the following primitives to PHP:
+
+  * new java("<classname>"): Instanciates the java class.
+
+  * java_set_library_path("<jar1>;<jar2>"): Makes additional libraries
+    available to the current script.  The <jar> can be either be
+    a "http:", "ftp:", "file:" or a "jar:" location.  After the script
+    execution the classes used by the script may or may not be garbage
+    collected:
+     
+     <?php
+      java_set_library_path("file:c:/mytest.jar");
+      $mytest = new java("mytest");
+      print $mytest->add(1, 2);
+     ?>
+     ==> 3
+
+     <?php
+      $mytest = new java("mytest");
+      print $mytest
+     ?>
+     ==> Result undefined, mytest may have been garbage collected.
+
+  * java_last_exception_get(): Returns the last exception instance or
+    null.
+
+  * java_last_exception_clear(): Clears the error condition.
+
   There is one example provided: test.php.  You can either invoke the
   test.php by typing ./test.php or copy the example into the document
   root of you web-server and invoke the file using the browser.
@@ -38,21 +66,59 @@ Build and execution instructions:
           su <password>
           make install
 
-   If your administrator allows you to dynamically load extensions, you
-   can now test the extension by invoking the test.php with the 
-   command: php ./test.php.
+  If your administrator allows you to dynamically load extensions, you
+  can now test the extension by invoking the test.php with the 
+  command: php ./test.php.
+
+  Custom java libraries (.jar files) can be stored in the following
+  places:
+
+   1. In the script jar_library_path of the current PHP script, if
+       set (see PHP_FUNCTION(java_set_library_path)).
+
+   2. In the sub-directory "lib" of the PHP extension directory:
+      "`php-config --extension-dir`/lib" if it exists when the
+      java VM starts the bridge.
+
+   3. In the /usr/share/java/ directory, if it exists when the 
+      java VM starts the bridge.
 
 
+  The PHP/Java Bridge can operate in 5 different modes:
+
+   1. Invoked from the dl() function.  This is very slow because it
+      starts a new Java VM for each request.  But this mode does not
+      require any administrative privileges.
+
+   2. Compiled into the PHP binary or library.  This is not
+      recommended because it requires that you mus compile PHP
+      yourself.  If you want to do this, please see the Windows
+      install description below.
+
+   3. Permanently activated in the global php.ini file.  This is
+      recommended, see below.
+
+   4. Permanently activated with the Java VM running as a
+      separate process.  Recommended for web servers, see below.
+      This mode is used in the binary RPM package available for
+      RedHat Enterprise Linux.
+
+   5. Compiled with the GNU Java library.  You can either start
+      GNU Java as a separate process (just like a "real" Java VM) or
+      compile the GNU Java library into the PHP/Java Bridge.
+      You can even compile the PHP/Java Bridge + GNU/Java directly
+      into PHP to create a huge PHP binary or library.
+
+  The following sections describe each of these options.
+ 
 ------------------------------------
    Permanently activate the module
    -------------------------------
 
-  
-  It is recommended to activate the module in the global php ini file.
-
-  To permanently activate the extension add the following lines to the
-  php.ini or add a file java.ini to the directory that contains the php
-  module descriptions (usually /etc/php.d/) with the following content:
+  To permanently activate the extension for all users, please add the
+  following lines to the php.ini or add a file java.ini to the
+  directory that contains the php module descriptions (usually
+  /etc/php.d/) with the following content:
 
           extension = java.so
           [java]
@@ -67,9 +133,13 @@ Build and execution instructions:
 
           echo "<?php phpinfo()?>" | php | fgrep "java status"
 
+---------------------------------------------
+   Starting the Java VM as a separate process
+   ------------------------------------------
+
   If you want to test the extension in the web-server, you should enable
   the java.socketname option and start the java VM before you start the
-  web-server.  The java VM can then be started either via the 
+  web-server.  The java VM can be started either via the
   "php-java-bridge" script or by typing the following command:
 
             JAVA_HOME=<java.home> <java.home>/bin/java \
@@ -201,21 +271,25 @@ Build and execution instructions:
   to the 64 bit JVM.  The relevant php.ini entry is java.java, see install
   instructions above.  
 
-  A Sun JVM that reads a wrong elf class will silently terminate after
-  the LoadLibrary.  The Sun VM does *not* indicate an error condition
-  or throw an exception.
-
 ------------------------------------
-  Windows issues
-  --------------
+  Windows Installation
+  --------------------
 
   This operating system has some unusal problems with shared libraries
-  (DLL's). It is not possible to link with a shared library that is
-  not installed or not in the path; this OS requires that programs or
-  libraries must be linked with concrete instances.
+  (DLL's). The autoconf/libtool documentation states:
 
-  Since it is not possible to compile the bridge as a standalone
-  module, we will compile it with PHP.
+   - Macro: AC_LIBTOOL_WIN32_DLL
+     This macro should be used if the package has been ported to build
+     clean dlls on win32 platforms.  Usually this means that any
+     library data items are exported with `__declspec(dllexport)' and
+     imported with `__declspec(dllimport)'.  If this macro is not used,
+     libtool will assume that the package libraries are not dll clean
+     and will build only static libraries on win32 hosts.
+
+  Until someone ports the sources to use __declspec, we avoid 
+  creating shared libraries on this system.  Instead we will
+  compile the extension into PHP:
+
 
   1. Install the source code of PHP 4.3.x.
 
@@ -223,9 +297,15 @@ Build and execution instructions:
 
   3. Delete the java sub-directory from php-4.3.x/ext and replace it
      with our php-java-bridge. Rename ext/php-java-bridge to
-     ext/java.
+     ext/java.  Edit the file php-4.3.x/ext/java/config.m4 and replace
+     the first 4 lines with these:
 
-  4. Invoke autoconf to update our java module within the PHP build
+      sinclude(ext/java/tests.m4/function_checks.m4)
+      sinclude(ext/java/tests.m4/java_check_broken_stdio_buffering.m4)
+      sinclude(ext/java/tests.m4/java_check_broken_gcc_installation.m4)
+
+
+  4. Invoke autoconf to register our java module within the PHP build
      tree and then compile php as usual:
  
       autoconf && ./configure --with-java && make
@@ -256,10 +336,11 @@ Build and execution instructions:
   please use PHP 4 with the PHP/Java Bridge.
 
 ------------------------------------
-  Dynamic module loading
-  ----------------------
+  Loading on-demand with dl()
+  ---------------------------
 
-  It is possible to load the bridge dynamically, for example with:
+  It is possible to load the bridge for each new request, for example
+  with:
 
     <?php
     if (!extension_loaded('java')) {
